--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -13,3 +13,10 @@ hermesEnabled=false
 
 # Additional recommended defaults
 org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
+
+# Provide default SDK versions so library modules evaluated early can access them
+# (some modules expect these to be available as project properties)
+compileSdkVersion=36
+compileSdk=36
+minSdkVersion=24
+targetSdkVersion=36
