--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "eslint.workingDirectories": [{ "directory": ".", "changeProcessCWD": true }, { "mode": "auto" }],
   "java.configuration.updateBuildConfiguration": "interactive",
   "jestrunner.jestCommandLine": "npm test --",
   "jest.pathToJest": "node_modules/.bin/jest",
