--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -31,17 +31,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Prepare Node environment
+        uses: ./.github/actions/node-setup
         with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
+          node_version: ${{ env.NODE_VERSION }}
+          cache_dependency_path: package-lock.json
+          working_directory: .
 
       - name: Run ESLint
         run: npm run lint
@@ -57,17 +52,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Prepare Node environment
+        uses: ./.github/actions/node-setup
         with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
+          node_version: ${{ env.NODE_VERSION }}
+          cache_dependency_path: package-lock.json
+          working_directory: .
 
       - name: Run npm audit
         run: npm audit --production --audit-level=high
@@ -84,17 +74,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Prepare Node environment
+        uses: ./.github/actions/node-setup
         with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
+          node_version: ${{ env.NODE_VERSION }}
+          cache_dependency_path: package-lock.json
+          working_directory: .
 
       - name: Run tests with coverage
         run: npm run test -- --coverage --maxWorkers=2
@@ -137,17 +122,12 @@ jobs:
     needs: [lint-and-typecheck]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Prepare Node environment
+        uses: ./.github/actions/node-setup
         with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
+          node_version: ${{ env.NODE_VERSION }}
+          cache_dependency_path: package-lock.json
+          working_directory: .
 
       - name: Verify Expo config
         run: npx expo config --type public
