--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install backend dependencies
         run: |
           echo "Installing backend dependencies"
-          (cd backend && npm ci)
+          npm ci
 
       - name: Run ESLint
         run: npm run lint
@@ -105,7 +105,7 @@ jobs:
       - name: Install backend dependencies
         run: |
           echo "Installing backend dependencies"
-          (cd backend && npm ci)
+          npm ci
 
       - name: Run npm audit
         run: npm audit --production --audit-level=high
@@ -137,7 +137,7 @@ jobs:
       - name: Install backend dependencies
         run: |
           echo "Installing backend dependencies"
-          (cd backend && npm ci)
+          npm ci
 
       - name: Build TypeScript
         run: npm run build
@@ -192,7 +192,7 @@ jobs:
       - name: Install backend dependencies
         run: |
           echo "Installing backend dependencies"
-          (cd backend && npm ci)
+          npm ci
 
       - name: Run unit tests
         run: npm run test:coverage -- --passWithNoTests
