test: disable Redis by default in .env.test; load .env.test during NODE_ENV=test

--- a/backend/.env.test
+++ b/backend/.env.test
@@ -14,7 +14,10 @@ DB_PASSWORD=postgres
 DB_SSL=false
 
 # Redis
-REDIS_ENABLED=true
+# Disabled by default in the test environment to avoid requiring a running
+# Redis instance during unit tests. Set to 'true' when running integration
+# tests that need a real Redis (e.g. with docker-compose.test.yml).
+REDIS_ENABLED=false
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
